tests/NormalTests/paczka1/small_fuzzy/49232111.err
Error in line 4: S507 S710 ,2
Error in line 10: IO7vYcc0ux S253 7468
